tests/golden/errors/sum-overflow.rk
fn main() {
    xs := [9223372036854775807, 1]
    print(xs.sum())
}
